# cppfetch

./: CMakeLists.txt  README.md  cmakelists.txt
.github/workflows/: cmake.yml
src/: main.cpp
